tests/paczka1/fuzzy1/18918744.err
Error in line 14: HM09 S214 18,48
Error in line 3: dhVRk S583 51,3
Error in line 26: BHBalWPKX6X A184 49,6
Error in line 24: S214 A184 28,3
Error in line 27: BHBalWPKX6X S214 72,7
Error in line 32: HM09 A184 27,2
